tests-integration/fixtures/checking/1777298340_top_level_fail_eager/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
boom :: Fail (Text "top-level Fail was checked") => Int
test :: Int

Types

Diagnostics
error[CustomFailure]: top-level Fail was checked
  --> 5:1..5:56
  |
5 | boom :: Fail (Text "top-level Fail was checked") => Int
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
